--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -269,12 +269,14 @@
 			"SEEMORE01": "Télécharger le Manuel du Joueur V1.0",
 			"RESUME02": "Pour les Maitres du Jeu seulement : un guide sur la campagne et le premier scénario d'introduction.",
 			"SEEMORE02": "Télécharger le Manuel du MJ V1.0",
+			"PERSOSPRETIRES": "Télécharger les personnages pré-tirés",
+			"PERSOSPARAMETERS": "Importer un personnage via sa sauvegarde",
 			"LISTPOWERS": "Télécharger la liste non-exhaustive de pouvoirs (cristaux)"
     }
 	},
 	"CREATION": {
 		"MENU": {
-			"IMPORT": "Importation d'un ancien personnage",
+			"IMPORT": "Pré-tirés / Importation de personnage",
 			"TITLE": "Fiche de personnage",
 			"TITLE01": "I - Peuple / Race",
 			"TITLE02": "II - Caractéristiques",
@@ -313,7 +315,8 @@
 		"HEROS01": "Un personnage est défini par deux séries de chiffres : ses <b>caractéristiques</b> et ses <b>compétences</b>.<br>Les caractéristiques définissent ce qu’est le personnage, et les compétences ce qu’il sait. Votre personnage sera plus ou moins fort, plus ou moins intelligent, plus ou moins adroit. Et c’est vous qui choisirez si, au cours de sa vie, il a appris à se battre ou s'il a préféré se tourner vers l'érudition, la médecine...",
 		"HEROS02": "Dans ce monde, hormis les stats, les principaux choix qui orienteront votre personnage seront sa race / peuple, mais aussi les cristaux qu'il utilisera. Cependant, malgré toutes les nombres et les textes notés sur la fiche de perso, c'est VOUS qui ferez vivre votre personnage via ses actions : on choisit ce que l'on est par nos actions !",
 		"HEROS03": "Créez alors ici un nouveau personnage du Monde d'Arlénor, ou mettez à jour la fiche du vôtre !",
-		"IMPORT": "Si vous avez sauvegardé les paramètres d'un personnage, vous pouvez l'importer (fichier JSON) et le modifier ensuite sur cette page.",
+		"PRETIRES": "Créer un personnage peut prendre du temps ou ne pas être simple au début... C'est pour cela qu'il existe des personnages pré-tirés : ce sont des fiches déjà complétées, prêtes à être utilisées ! Vous y trouverez un guerrier humain, un elfe nécromant, un mutant fou, un pan discret... Une variété de personnages pour vous permettre d'y trouver votre compte !",
+		"IMPORT": "Si vous avez sauvegardé les paramètres d'un personnage, ou que vous souhaitez personnaliser un perso pré-tiré, vous pouvez l'importer (fichier JSON) et le modifier ensuite sur cette page. ",
 		"CARACTS01": "Toute personne est dotée de capacités de base qui lui sont inhérentes et qu’il peut utiliser de bien des manières. Ces aptitudes naturelles sont définies par cinq caractéristiques distinctes, chacune évaluée sur une échelle allant de <b>1 à 5</b>.",
 		"CARACTS02": "Un score de 1 dans une caractéristique indique une vraie faiblesse dans le domaine concerné, tandis qu’un 2 place le personnage dans la moyenne, ni plus ni moins. A partir de 3, la personne dispose d’une facilité particulière dans la caractéristique concernée, et un 4 indique des facultés exceptionnelles. Enfin, un score de 5 représente le maximum des capacités : seuls quelques très rares individus atteignent ce score.",
 		"VIGUEUR": {
