Refactor(arenart): Change name page

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -11,6 +11,7 @@
 		"ROLEPLAY": "Le Jeu de rôle",
 		"CREATION": "La Création du Personnage",
     "CHARACTERS": "Les Personnages",
+		"ARENART": "L'Arenart",
     "ABOUT": "A Propos",
     "LEGACY": "Mentions Légales"
   },
