--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -284,17 +284,17 @@
     "PERSO": {
       "TITLE": "La création de personnage",
       "RESUME": "Créez votre personnage, des caractéristiques aux compétences, en passant par leurs pouvoirs... Accédez dès maintenant à la naissance de votre personnage !",
-      "SEEMORE": "Passer à la création (Pas à jour)"
+      "SEEMORE": "Passer à la création !"
     },
     "FILES": {
       "TITLE": "Les règles du jeu",
       "RESUME01": "Trouvez ici tous les éléments permettant de comprendre la création de personnage en profondeur ainsi que le système de jeu et des propositions de pouvoirs.",
-      "SEEMORE01": "Télécharger le Manuel du Joueur V1.0 (pas à jour)",
+      "SEEMORE01": "Télécharger le Manuel du Joueur V2.0",
       "RESUME02": "Pour les Maitres du Jeu seulement : un guide sur la campagne et le premier scénario d'introduction.",
       "SEEMORE02": "Télécharger le Manuel du MJ V1.0 (pas à jour)",
-      "PERSOSPRETIRES": "Télécharger les personnages pré-tirés",
+      "PERSOSPRETIRES": "Télécharger les personnages pré-tirés (pas à jour)",
       "PERSOSPARAMETERS": "Importer un personnage via sa sauvegarde",
-      "LISTPOWERS": "Télécharger la liste non-exhaustive de pouvoirs (cristaux)"
+      "LISTPOWERS": "Télécharger la liste non-exhaustive de pouvoirs (pas à jour)"
     }
   },
   "CREATION": {
@@ -375,47 +375,47 @@
     "ART": {
       "NAME": "Art / Artisanat",
       "HELP": "<b>Art / Artisanat</b><br><br>La capacité artistique pure et simple. Les grands peintres, les musiciens, les chanteurs, sculpteurs et comédiens ont tous en commun l’utilisation de cette compétence. Elle permet de gagner sa vie et de se faire apprécier de ceux que l’on rencontre. Cette compétence est aussi celle que partagent tous les bricoleurs, jusqu’aux grands maîtres artisans créant des pièces uniques. Fonctionnant surtout sur le principe du test étendu, l’Artisanat permet aux personnages de créer seuls ce qu’ils ne trouvent pas ailleurs.<br><br><i>Exemples :</i><br>- Créer une contrefaçon d’un document officiel (test étendu, Hab. + Art / Artisanat Diff. 15, Objectif 10).<br>- Expertiser un objet ancien redécouvert récemment (Int. + Art / Artisanat, Diff. 16).<br>- Peindre un chef d’œuvre à la gloire de la princesse (Test étendu, Hab. + Art / Artisanat, Diff. 22, Objectif 20).<br><br><i>Temps d'action :</i><br>Variable. Faire un concert ou une représentation de comédie dure environ une heure, tandis que composer une œuvre prend une journée par test. <br><br><i>Spécialités :</i><br>Archéologie, Armurerie, Contrefaçon, Comédie, Écriture, Musique, Peinture.",
-      "SPECIALISTICS": "Archéologie, Armurerie, Contrefaçon, Comédie, Écriture, Musique, Peinture"
+      "SPECIALISTICS": "Archéologie,Armurerie,Contrefaçon,Comédie,Écriture, Musique,Peinture"
     },
     "ATHLETISME": {
       "NAME": "Athlétisme",
       "HELP": "<b>Athlétisme</b><br><br>Cette compétence regroupe les capacités sportives. Un personnage avec un haut niveau d’Athlétisme peut courir vite et longtemps, escalader des parois difficiles d’accès, nager sur de longues distances et tenir en équilibre sur un fil.<br><br><i>Exemples :</i><br>- Courir après quelqu’un (test en opposition étendu de Vig. + Athlétisme, Difficulté et Objectif variable selon la distance entre les personnages).<br>- Tenir en équilibre tout en avançant sur une corniche étroite (Hab. + Athlétisme, Diff. 14).<br>- Nager au beau milieu d’une mer démontée (Vig. + Athlétisme, Diff. 20).<br><br><i>Temps d'action :</i><br>Instantané. <br><br><i>Spécialités :</i><br>Course, Équilibre, Escalade, Lancer, Natation, Saut.",
-      "SPECIALISTICS": "Course, Équilibre, Escalade, Lancer, Natation, Saut"
+      "SPECIALISTICS": "Course,Équilibre,Escalade,Lancer,Natation,Saut"
     },
     "COMBAT": {
       "NAME": "Combat",
       "HELP": "<b>Combat</b><br><br>L’aptitude du personnage à manier les armes et à se défendre en situation d’affrontement physique. Cette compétence regroupe la maîtrise de tous les types d’armes ainsi que du combat à mains nues. Cependant, elle ne gère absolument pas ce qui concerne le combat avec les cristaux !<br><br><i>Exemples :</i><br>Voir les règles de bases.<br><br><i>Temps d'action :</i><br>Généralement, un tour de combat. <br><br><i>Spécialités :</i><br>Arcs, Armes à feu, Haches, Épées, Esquive, Parade.",
-      "SPECIALISTICS": "Arcs, Armes à feu, Haches, Épées, Esquive, Parade"
+      "SPECIALISTICS": "Arcs,Armes à feu,Haches,Épées,Esquive,Parade"
     },
     "FURTIVITE": {
       "NAME": "Furtivité",
       "HELP": "<b>Furtivité</b><br><br>Cette compétence est celle des criminels, des espions et des enquêteurs. Elle permet de se cacher en toutes circonstances, qu’il s’agisse de se faire discret dans une forêt ou de paraître anonyme au milieu de la foule.<br><br><i>Exemples :</i><br>Le test d’Habileté + Furtivité du personnage est toujours un test en opposition avec un test d’Intellect + Perception de celui ou ceux qui auraient intérêt à le repérer. Si le personnage échoue à ce test, il est repéré.<br><br><i>Temps d'action :</i><br>Instantané. <br><br><i>Spécialités :</i><br>Anonymat, Camouflage, Filature, Vol à la tire.",
-      "SPECIALISTICS": "Anonymat, Camouflage, Filature, Vol à la tire"
+      "SPECIALISTICS": "Anonymat,Camouflage,Filature,Vol à la tire"
     },
     "MEDECINE": {
       "NAME": "Médecine",
       "HELP": "<b>Médecine</b><br><br>La médecine est la compétence qui permet au personnage de comprendre les causes des maladies, de soigner les blessures et de guérir une personne empoisonnée. Elle comprend la fabrication des médicaments et remèdes, mais également celle des poisons.<br><br><i>Exemples :</i><br>- Diagnostiquer une maladie simple (Int. + Médecine Diff. 9).<br>- Fabriquer un antidote à un poison courant (Test étendu, Int. + Médecine Diff. 14, Objectif 10).<br>- Traiter une maladie inconnue et mortelle (Test étendu, Int. + Médecine Diff. 25, Objectif 30 et plus).<br><br><i>Temps d'action :</i><br>Variable. Le plus souvent, une heure est requise pour tenter un diagnostic ou faire un test pour fabriquer un médicament. Pour soigner les blessures ou traiter une maladie, il faut une journée par test. <br><br><i>Spécialités :</i><br>Apothicaire, Chirurgie, Diagnostic, Poisons, Maladies, Secourisme.",
-      "SPECIALISTICS": "Apothicaire, Chirurgie, Diagnostic, Poisons, Maladies, Secourisme"
+      "SPECIALISTICS": "Apothicaire,Chirurgie,Diagnostic,Poisons,Maladies,Secourisme"
     },
     "PERCEPTION": {
       "NAME": "Perception",
       "HELP": "<b>Perception</b><br><br>La Perception est la compétence qui permet au personnage de trouver des indices, d’établir des relations entre différents sens et de remarquer les détails de son environnement, ce qui comprend les personnes ou objets cachés. Elle permet aussi de discerner l’état émotionnel de ses interlocuteurs ou de comprendre quand on lui ment.<br><br><i>Exemples :</i><br>- Trouver un indice sur une scène de crime (Int. + Perception Diff. 10).<br>- Établir un lien entre plusieurs éléments (Int. + Perception Diff. 16).<br>- Repérer un détective en filature (Int. + Perception contre Hab. + Furtivité).<br><br><i>Temps d'action :</i><br>Une heure de recherche par test environ. Repérer quelqu’un est un test instantané. <br><br><i>Spécialités :</i><br>Audition, Chercher objets, Intuition, Odorat, Toucher.",
-      "SPECIALISTICS": "Audition, Chercher objets, Intuition, Odorat, Toucher"
+      "SPECIALISTICS": "Audition,Chercher objets,Intuition,Odorat,Toucher"
     },
     "SAVOIR": {
       "NAME": "Savoir",
       "HELP": "<b>Savoir</b><br><br>Cette compétence évalue l’érudition du personnage. Elle représente un savoir général dans tous les domaines, de l’histoire aux sciences de la vie, et celui qui la maîtrise à un haut niveau peut être considéré comme un véritable puits de science. De plus, celui qui maîtrise cette compétence peut identifier des sorts, connaît les créatures magiques et la science des potions et philtres en tous genres.<br><br><i>Exemples :</i><br>Selon la rareté de l’information et sa précision, la Difficulté varie.<br><br><i>Temps d'action :</i><br>Instantané. Le personnage sait ou ne sait pas, mais régler une énigme mystique particulièrement longue peut demander plus de temps, et un test étendu. <br><br><i>Spécialités :</i><br>Bibliothèque, Cristologie, Histoire et Théologie, Langues et Littérature, Pilotage, Sciences de la nature, Sciences technologiques.",
-      "SPECIALISTICS": "Bibliothèque, Cristologie, Histoire et Théologie, Langues et Littérature, Pilotage, Sciences de la nature, Sciences technologiques"
+      "SPECIALISTICS": "Bibliothèque,Cristologie,Histoire et Théologie,Langues et Littérature,Pilotage,Sciences de la nature,Sciences technologiques"
     },
     "SOCIAL": {
       "NAME": "Social",
       "HELP": "<b>Social</b><br><br>Capacité à convaincre les autres par la force de vos arguments, celle qui permet d’obtenir ce que l’on veut des autres, ou des informations sur tout un tas de sujets. Le Social est l’instrument préféré des diplomates, des vendeurs et de tous les professionnels de la négociation. Elle permet d’obtenir un prix sur un objet autant que de captiver les foules. Les experts dans ce domaine savent aussi délier les langues rapidement et dissimuler leurs véritables émotions ou objectifs aux yeux des autres.<br><br><i>Exemples :</i><br>Que ce soit pour faire avouer un secret à quelqu’un en le menaçant ou pour convaincre quelqu’un, le Social se joue par un test opposé (Pré. + Social contre Int. + Intuition).<br>Si plusieurs orateurs cherchent à se convaincre, un test opposé de Pré. + Social a lieu, et le plus haut score l’emporte.<br><br><i>Temps d'action :</i><br>Variable. <br><br><i>Spécialités :</i><br>Discours, Interrogatoire, Marchandage, Mensonge, Séduction.",
-      "SPECIALISTICS": "Discours, Interrogatoire, Marchandage, Mensonge, Séduction"
+      "SPECIALISTICS": "Discours,Interrogatoire,Marchandage,Mensonge,Séduction"
     },
     "CRYSTALS": {
       "TEXT01": "Dans le Monde d'Arlénor, la quasi-totalité des personnes utilisent des cristaux dans leur vie quotidienne (principalement des rangs O selon la convention SABO). En étant à leur contact, ces cristaux permettent d'utiliser certains pouvoirs en échange d'un peu d’énergie vitale. De plus, faire appel au pouvoir d'un cristal est une action rapide. Il suffit que le personnage le désire, et l'utilisation du pouvoir est alors immédiat.<br>Les personnages ne peuvent se lier qu'à 3 cristaux de rangs supérieurs ou égaux à B à la fois, car plus, entrainerait sur soi des perturbations physiques et psychiques...",
-      "TEXT02": "Pour la création, vous pouvez choisir n'importe quel pouvoir (la limite est votre imagination) et le créer via 8 points de cristaux. Les rangs S ne s'acquiert généralement pas durant la création.<br>L'augmentation du niveau, équivalent de compétence, ainsi que le choix d'une durée et d'une portée, fera baisser ce nombre de points. Tandis que l'ajout de contraintes (séparées par des ';') ajoutera 1 point par contrainte posée sur l'utilisation du cristal.<br>Le lien entre l'utilisateur et son cristal n'est pas innée, mais s'améliore à force de l'utiliser : cela se traduit notamment par des contraintes qui s'enlèvent au fur et mesure de l'expérience obtenue.",
-      "TEXT03": "Exemple de contraintes : artificiel (nécessite un outil), fréquence d'utilisation, forme alternative (le perso doit se transformer pour utiliser le pouvoir), apparence inhumaine (le perso à en permanence les yeux fluorescents), circonstance (le pouvoir ne fonctionne que la nuit)... tout est encore soumis à l'imagination !"
+      "TEXT02": "Pour la création, vous pouvez choisir n'importe quel pouvoir (la limite est votre imagination) et le créer via 5 points de cristaux. Les rangs S ne s'acquiert généralement pas durant la création.<br>L'augmentation du niveau, équivalent de compétence, ainsi que le choix d'une durée et d'une portée, fera baisser ce nombre de points. Tandis que l'ajout de contraintes (séparées par des ';') ajoutera 1 point par contrainte posée sur l'utilisation du cristal.<br>Le lien entre l'utilisateur et son cristal n'est pas innée, mais s'améliore à force de l'utiliser : cela se traduit notamment par des contraintes qui s'enlèvent au fur et mesure de l'expérience obtenue.",
+      "TEXT03": "Exemple de contraintes : artificiel (besoin d'un outil pour être utilisé), fréquence d'utilisation, forme alternative (devoir se transformer pour utiliser le pouvoir), apparence inhumaine (avoir les yeux fluorescents), circonstance (ne fonctionner que la nuit)... tout est encore soumis à l'imagination !"
     },
     "EQUIPEMENT": {
       "TEXT": "La magie du monde d'Arlénor est puissante et quasi primordiale pour combattre. Cependant, pour certains personnages, il est aussi vital d'avoir un équipement adéquat en combat. Dans le Monde d'Arlénor, il existe toute sorte d'armes, cependant les armes non magiques ne sont pas très bien vues par les gens de la société adeptes des cristaux (notamment la société Faradélienne).<br>L'équipement est limité à trois slots pour ce qui est armes et armures : cela correspond aussi bien à la capacité physique d'une personne à transporter des choses sur elle quotidiennement."
