--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -141,7 +141,7 @@
         "COMMENTNAME": "Ancien prêtre reconverti en conteur pour enfants"
       },
       "ENTITY12": {
-        "TITLE": "BELZEBTUH, Démon de la Vengeance",
+        "TITLE": "BELZEBUTH, Démon de la Vengeance",
         "SUBTITLE": "Symbole de la Guerre et de la Stratégie",
         "COMMENT": "La vengeance est un plat qui se mange froid... ça tombe bien, j'en suis au dessert.",
         "COMMENTNAME": "Romain, s'étant transformé en loup"
@@ -173,7 +173,7 @@
       "ENTITY17": {
         "TITLE": "BA'AL, Démon de la Luxure",
         "SUBTITLE": "Symbole de l'Amour et du Sexe",
-        "COMMENT": "Le bâton et les pierres peuvent me briser les os, mais les chaines et les cordes, elles, m'excitent.",
+        "COMMENT": "Le bâton et les pierres peuvent me briser les os, mais les chaines et les fouets, eux, m'excitent.",
         "COMMENTNAME": "Chanteuse célebre dans les bars faradéliens"
       },
       "ENTITY18": {
@@ -197,8 +197,8 @@
     },
     "CRYSTALS": {
       "SECTION01": "La magie du Monde d'Arlénor provient des cristaux laissés par les anges et démons lors de la création du monde, des fragments de leurs pouvoirs.",
-      "SECTION02": "Les premiers humains découvrirent leur pouvoir en l'An 0 du calendrier arlénien. Le Monde d'Arlénor vit alors une chasse aux cristaux, un développement d'outils, d'armes, et même de citées basées sur ces cristaux.",
-      "SECTION03": "Les détenteurs de cristaux les utilisent en leur transférant leur énergie vitale, ce qui donne ensuite un effet, un pouvoir. Aujourd'hui, les peuples utilisent les cristaux dans leur vie quotidienne, avec plus ou moins de puissance.",
+      "SECTION02": "Les premiers humains découvrirent leur pouvoir en l'An 0 du calendrier arlénien. Le Monde d'Arlénor vit alors une chasse aux cristaux, un développement d'outils, d'armes, et même de citées basées sur ces cristaux. Aujourd'hui, les peuples utilisent les cristaux dans leur vie quotidienne, avec plus ou moins de puissance.",
+      "SECTION03": "Les détenteurs de cristaux se lient à eux, puis les utilisent en leur transférant leur énergie vitale : ce qui donne ensuite un effet, un pouvoir.",
       "PROPERTIES": {
         "SUBTITLE": "Le cristal arlénien",
         "TITLE": "Propriétés connues par tous",
@@ -207,11 +207,14 @@
         "03": "Un cristal est très solide, résistant.",
         "04": "Un cristal est caractérisé par un rang S, A, B, O en fonction de la puissance et de sa rareté.",
         "05": "Les cristaux de rang S sont uniques au monde, il y en a très peu et leur puissance est légendaire.",
-        "06": "L'énergie vitale doit être transmise par contact physique entre le cristal et l'utilisateur.",
-        "07": "Plus l'utilisateur est en contact avec son cristal, plus un lien, encore inconnu, se tisse entre eux.",
-        "08": "Les cristaux viennent principalement des mines de la cité désertique Jirakan.",
-        "09": "Seuls les cristalliens (métier complexe) peuvent les retravailler en leur donnant une forme précise.",
-        "10": "Les cristaux ne peuvent pas être séparés en plusieurs parties. Cassés, ils perdent leur pouvoir."
+        "06": "Les cristaux de rang 0 ont la puissance d'une pile, et sont utilisés dans la technologie de tous les jours.",
+        "07": "L'utilisateur se lie à un cristal, avec une limite de 3 cristaux de rang (B ou supérieur) à la fois.",
+        "08": "Le lien peut se briser, mais il ne pourra pas se reformer entièrement par la suite.",
+        "09": "Plus l'utilisateur utilise ses cristaux, plus le lien entre eux s'intensifie.",
+        "10": "Plus l'utilisateur est loin de son cristal, plus il lui est difficile de l'utiliser.",
+        "11": "Les cristaux viennent principalement des mines de la cité désertique Jirakan.",
+        "12": "Seuls les cristalliens (métier complexe) peuvent les retravailler en leur donnant une forme précise.",
+        "13": "Les cristaux ne peuvent pas être séparés en plusieurs parties. Cassés, ils perdent leur pouvoir."
       }
     },
     "POPULATION": {
@@ -235,7 +238,7 @@
         "TEXT02": "Les Elfes se sont habitués à ce statut, si bien que lorsque d'autres races sont apparues, une foule de discriminations envers ces dernières, ont commencé. De plus, leur affinité aux cristaux est devenue au fil des siècles un problème d'addiction... Ils sont eux aussi concentrés dans les plaines de Terfil, et vivent dans les hauts quartiers de la cité de Faradel.",
         "LOCATION": "L'Empire Faradélien, Le Régime Jirakanien",
         "AVANTAGES": "- Personnage très respecté globalement par les humains et les autres elfes",
-        "INCONVENIENTS": "- Niveau « gravement atteint » de blessure : 1 case<br>- Personnage craint ou hait globalement par les nains et les mutants<br>- Dû à son addiction, la magie de l'elfe se lie intensément aux premiers cristaux que l'elfe tente de maîtriser. Si bien qu'il ne pourra se concentrer que sur trois cristaux dans toute sa vie."
+        "INCONVENIENTS": "- Niveau « gravement atteint » de blessure : 1 case<br>- Personnage craint et/ou haït globalement par les nains et les mutants<br>- Dû à son addiction, l'elfe ne pourra se lier qu'aux 3 premiers cristaux qu'il tentera de maîtriser dans toute sa vie."
       },
       "PEOPLE3": {
         "NAME": "Nain",
@@ -261,8 +264,8 @@
         "TEXT01": "Les Pans sont des enfants humains choisis et appelés dans la forêt de Miryden par une puissante entité magique nommée Nebulys. Contrairement aux autres peuples, ils subissent leur mutation génétique lorsqu'ils entrent dans cette forêt et deviennent des Pans à part entière. Par ce processus, Nebulys les a lié à la nuit : le soir leur peau prend la couleur du ciel, plus claire lors de pleines lunes et plus sombre lors de nouvelles lunes.",
         "TEXT02": " Les Pans accordent respect et protection de la faune et de la flore. De plus, dans la forêt de Miryden, les Pans sont comme connectés entre eux via Nebulys : résultant une intelligence collective. Le fait de s'éloigner de la forêt, sans oublier la nature craintive et technophobe des Pans, les déconnecterait et rendrait certains vulnérables, déprimés, voire fous.",
         "LOCATION": "Inconnue",
-        "AVANTAGES": "- Peut manipuler l'énergie vitale végétale et animale, voire même l'utiliser...",
-        "INCONVENIENTS": "- Niveau « gravement atteint » de blessure : 1 case<br>- N'apprécie pas l'utilisation inutile des cristaux et protège la vie.<br>- Fort dégoût pour les cités et la technologie.<br>- Anxiété sociale, peur des foules."
+        "AVANTAGES": "- Peut manipuler l'énergie vitale végétale et animale de la forêt de Miryden",
+        "INCONVENIENTS": "- Niveau « gravement atteint » de blessure : 1 case<br>- N'apprécie pas l'utilisation inutile des cristaux et protège la vie.<br>- Anxiété sociale, peur des foules et des cités technologiques."
       },
       "PEOPLE6": {
         "NAME": "Arlénien",
@@ -271,7 +274,7 @@
         "TEXT02": "Les Arléniens sont généralement grands et tatoués : ils n'arrivent pas à utiliser les cristaux dans leur état solide... Ils ont alors un rituel, sur une semaine au minimum, qui transforme un cristal en encre puis en tatouage. Et de leur côté, les Arléniens n'ont pas de liens mentaux entre eux, mais un lien direct avec Nebulys : ils ressentent le besoin et le devoir de rester dans la forêt pour protéger leur créateur.",
         "LOCATION": "Inconnue",
         "AVANTAGES": "- Niveau « gravement atteint » de blessure : 3 cases<br>- Magie ne nécessitant pas de cristal",
-        "INCONVENIENTS": "- Doit se faire passer pour un humain pour protéger le secret de son peuple"
+        "INCONVENIENTS": "- Ne peut pas porter plus de 3 tatouages et ne peut pas s'en défaire.<br>- Doit se faire passer pour un humain pour protéger le secret de son peuple"
       }
     }
   },
@@ -289,7 +292,7 @@
     "FILES": {
       "TITLE": "Les règles du jeu",
       "RESUME01": "Trouvez ici tous les éléments permettant de comprendre la création de personnage en profondeur ainsi que le système de jeu et des propositions de pouvoirs.",
-      "SEEMORE01": "Télécharger le Manuel du Joueur V2.0",
+      "SEEMORE01": "Télécharger le Manuel du Joueur V2.1",
       "RESUME02": "Pour les Maitres du Jeu seulement : un guide sur la campagne et le premier scénario d'introduction.",
       "SEEMORE02": "Télécharger le Manuel du MJ V1.0 (pas à jour)",
       "PERSOSPRETIRES": "Télécharger les personnages pré-tirés (pas à jour)",
@@ -384,8 +387,8 @@
     },
     "COMBAT": {
       "NAME": "Combat",
-      "HELP": "<b>Combat</b><br><br>L’aptitude du personnage à manier les armes et à se défendre en situation d’affrontement physique. Cette compétence regroupe la maîtrise de tous les types d’armes ainsi que du combat à mains nues. Cependant, elle ne gère absolument pas ce qui concerne le combat avec les cristaux !<br><br><i>Exemples :</i><br>Voir les règles de bases.<br><br><i>Temps d'action :</i><br>Généralement, un tour de combat. <br><br><i>Spécialités :</i><br>Arcs, Armes à feu, Haches, Épées, Esquive, Parade.",
-      "SPECIALISTICS": "Arcs,Armes à feu,Haches,Épées,Esquive,Parade"
+      "HELP": "<b>Combat</b><br><br>L’aptitude du personnage à manier les armes et à se défendre en situation d’affrontement physique. Cette compétence regroupe la maîtrise de tous les types d’armes ainsi que du combat à mains nues. Cependant, elle ne gère absolument pas ce qui concerne le combat avec les cristaux !<br><br><i>Exemples :</i><br>Voir les règles de bases.<br><br><i>Temps d'action :</i><br>Généralement, un tour de combat. <br><br><i>Spécialités :</i><br>Armes à distance, Armes à feu, Armes à une main, Armes à deux mains, Esquive, Parade.",
+      "SPECIALISTICS": "Armes à distance,Armes à feu,Armes à une main,Armes à deux mains,Esquive,Parade"
     },
     "FURTIVITE": {
       "NAME": "Furtivité",
@@ -413,9 +416,9 @@
       "SPECIALISTICS": "Discours,Interrogatoire,Marchandage,Mensonge,Séduction"
     },
     "CRYSTALS": {
-      "TEXT01": "Dans le Monde d'Arlénor, la quasi-totalité des personnes utilisent des cristaux dans leur vie quotidienne (principalement des rangs O selon la convention SABO). En étant à leur contact, ces cristaux permettent d'utiliser certains pouvoirs en échange d'un peu d’énergie vitale. De plus, faire appel au pouvoir d'un cristal est une action rapide. Il suffit que le personnage le désire, et l'utilisation du pouvoir est alors immédiat.<br>Les personnages ne peuvent se lier qu'à 3 cristaux de rangs supérieurs ou égaux à B à la fois, car plus, entrainerait sur soi des perturbations physiques et psychiques...",
-      "TEXT02": "Pour la création, vous pouvez choisir n'importe quel pouvoir (la limite est votre imagination) et le créer via 5 points de cristaux. Les rangs S ne s'acquiert généralement pas durant la création.<br>L'augmentation du niveau, équivalent de compétence, ainsi que le choix d'une durée et d'une portée, fera baisser ce nombre de points. Tandis que l'ajout de contraintes (séparées par des ';') ajoutera 1 point par contrainte posée sur l'utilisation du cristal.<br>Le lien entre l'utilisateur et son cristal n'est pas innée, mais s'améliore à force de l'utiliser : cela se traduit notamment par des contraintes qui s'enlèvent au fur et mesure de l'expérience obtenue.",
-      "TEXT03": "Exemple de contraintes : artificiel (besoin d'un outil pour être utilisé), fréquence d'utilisation, forme alternative (devoir se transformer pour utiliser le pouvoir), apparence inhumaine (avoir les yeux fluorescents), circonstance (ne fonctionner que la nuit)... tout est encore soumis à l'imagination !"
+      "TEXT01": "Dans le Monde d'Arlénor, la quasi-totalité des personnes utilisent des cristaux dans leur vie quotidienne (principalement des rangs O selon la convention SABO). En étant à leur contact, ces cristaux permettent d'utiliser certains pouvoirs en échange d'un peu d’énergie vitale. De plus, faire appel au pouvoir d'un cristal est une action rapide. Il suffit que le personnage le désire, et l'utilisation du pouvoir est alors immédiat.<br>Pour la création, vous pouvez choisir n'importe quel pouvoir (la limite est votre imagination) et le créer via 5 points de cristaux. De plus, pour rappel, les personnages ne peuvent se lier qu'à 3 cristaux de rangs supérieurs ou égaux à B à la fois, car plus, entrainerait sur soi des perturbations physiques et psychiques... et les rangs S ne s'acquiert généralement pas durant la création.",
+      "TEXT02": "<b>Il est fortement conseillé à la création de n'avoir qu'un 1 ou 2 cristaux de rang A, et 1 ou 2 cristaux de rang B !</b>",
+      "TEXT03": "L'augmentation du niveau, équivalent de compétence, ainsi que le choix d'une durée et d'une portée, fera baisser ce nombre de points. Tandis que l'ajout de contraintes (séparées par des ';') ajoutera 1 point par contrainte posée sur l'utilisation du cristal.<br>Le lien entre l'utilisateur et son cristal n'est pas innée, mais s'améliore à force de l'utiliser : cela se traduit notamment par des contraintes qui s'enlèvent au fur et mesure de l'expérience obtenue.<br>Exemple de contraintes : artificiel (besoin d'un outil pour être utilisé), fréquence d'utilisation, forme alternative (devoir se transformer pour utiliser le pouvoir), apparence inhumaine (avoir les yeux fluorescents), circonstance (ne fonctionner que la nuit)... tout est encore soumis à l'imagination !"
     },
     "EQUIPEMENT": {
       "TEXT": "La magie du monde d'Arlénor est puissante et quasi primordiale pour combattre. Cependant, pour certains personnages, il est aussi vital d'avoir un équipement adéquat en combat. Dans le Monde d'Arlénor, il existe toute sorte d'armes, cependant les armes non magiques ne sont pas très bien vues par les gens de la société adeptes des cristaux (notamment la société Faradélienne).<br>L'équipement est limité à trois slots pour ce qui est armes et armures : cela correspond aussi bien à la capacité physique d'une personne à transporter des choses sur elle quotidiennement."
